[gd_scene load_steps=11 format=2]

[ext_resource path="res://GFX/Mario/Walk.png" type="Texture" id=1]
[ext_resource path="res://Scripts/General/MarioPhysics.gd" type="Script" id=2]
[ext_resource path="res://GFX/Mario/Jump.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Main/jump.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 30, 31 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 30, 31 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 30, 31 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Stopped",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 14 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 2 )

[node name="Mario" type="Area2D"]
script = ExtResource( 2 )

[node name="SmallMario" type="AnimatedSprite" parent="."]
position = Vector2( 0, -15 )
frames = SubResource( 4 )
animation = "Jumping"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -1, -13 )
shape = SubResource( 5 )

[node name="BottomDetector" type="Area2D" parent="."]

[node name="CollisionBottom" type="CollisionShape2D" parent="BottomDetector"]
position = Vector2( -1, 15 )
shape = SubResource( 6 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
